apps/media/deluge/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deluge
  namespace: media
  labels:
    app: deluge
  annotations:
    backup.velero.io/backup-volumes: config
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: deluge
  template:
    metadata:
      labels:
        app: deluge
    spec:
      containers:
      - name: deluge
        securityContext:
          capabilities:
            add: ["NET_ADMIN"]
        image: ebrianne/docker-deluge-openvpn:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8112
          name: deluge
        resources: {}
        volumeMounts:
        - name: config
          mountPath: /config
        - name: downloads
          mountPath: /downloads
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: nfs-pvc-deluge
      - name: downloads
        nfs:
          server: 10.0.40.2
          path: /mnt/vault/Media/downloads
