apps/media/deluge/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: deluge
  namespace: media
spec:
  ports:
  - name: deluge
    targetPort: deluge
    port: 8112
  selector:
    app: deluge
