apps/media/deluge/ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    app: deluge
  name: deluge
  namespace: media
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: deluge.home-lab.io
    http:
      paths:
      - path:
        backend:
          serviceName: deluge
          servicePort: 8112
